improved dt reloading table cleaning
